--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <nav class="nav">
     <div class="nav__inner">
       <a href="#" class="nav__logo">
-        <img src="assets/logo.png" alt="monday CRM" class="nav__logo-img" width="28" height="28" />
+        <img src="../assets/logo.png" alt="monday CRM" class="nav__logo-img" width="28" height="28" />
       </a>
       <div class="nav__links">
         <a href="#">Product</a>
@@ -59,7 +59,7 @@
 
       <!-- Right: Hero image (agent + integrations) -->
       <div class="hero__visual">
-        <img src="assets/hero-agent.svg" alt="Agentic workforce: human at the center with Zoom, LinkedIn, Gmail, and Slack integrations" class="hero__img" width="1548" height="1116" />
+        <img src="../assets/hero-agent.svg" alt="Agentic workforce: human at the center with Zoom, LinkedIn, Gmail, and Slack integrations" class="hero__img" width="1548" height="1116" />
       </div>
     </div>
   </section>
@@ -177,7 +177,7 @@
             <p class="stack-card__body">A network of AI agents that qualifies, follows up, routes, and executes your revenue work — fuelled entirely by your data and context. Not generic automation. Your playbook, running at scale.</p>
           </div>
           <div class="stack-card__visual" aria-hidden="true">
-            <img src="assets/revenue-force-visual.png" alt="" class="stack-card__img" width="480" height="360" />
+            <img src="../assets/revenue-force-visual.png" alt="" class="stack-card__img" width="480" height="360" />
           </div>
         </div>
       </article>
@@ -191,7 +191,7 @@
             <p class="stack-card__body">Revenue Intelligence reads every signal, learns what good looks like, and decides what happens next. It flags risks, spots opportunities, and activates the right agent at the right moment. It also watches your human sellers — surfacing coaching signals from real conversations so every manager knows exactly how to turn good reps into great ones.</p>
           </div>
           <div class="stack-card__visual" aria-hidden="true">
-            <img src="assets/revenue-intelligence-visual.png" alt="" class="stack-card__img" width="480" height="360" />
+            <img src="../assets/revenue-intelligence-visual.png" alt="" class="stack-card__img" width="480" height="360" />
           </div>
         </div>
       </article>
@@ -205,7 +205,7 @@
             <p class="stack-card__body">It's a living system that captures every interaction, updates itself automatically, and surfaces what matters before you think to look. The most context-rich foundation ever built — and the engine that makes every agent smarter with every deal it runs.</p>
           </div>
           <div class="stack-card__visual" aria-hidden="true">
-            <img src="assets/crm-core-visual.png" alt="" class="stack-card__img" width="480" height="360" />
+            <img src="../assets/crm-core-visual.png" alt="" class="stack-card__img" width="480" height="360" />
           </div>
         </div>
       </article>
